--- a/src/App.scss
+++ b/src/App.scss
@@ -42,8 +42,7 @@ body{
     }
 }
 
-.gradient-orange {
-    background: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
+.gradient {
     border-top-left-radius: 0.75rem;
     border-bottom-left-radius: 0.75rem;
 
@@ -51,6 +50,22 @@ body{
         border-top-right-radius: 0.75rem;
         border-bottom-left-radius: 0;
     }
+}
+
+.gradient-orange {
+    background: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
+}
+
+.gradient-green {
+    background: linear-gradient(135deg, #1C792B 0%, #82E95E 100%);
+}
+
+.gradient-blue {
+    background: linear-gradient(135deg, #0597B7 0%, #66D1FF 100%);
+}
+
+.gradient-yellow {
+    background: linear-gradient(135deg, #FFC700 0%, #FFF388 100%);
 }
 
 .card{
@@ -69,26 +84,25 @@ body{
     }
 }
 
-.center-image {
-
-    display: block;
+.circle {
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    object-fit: cover;
+    object-position: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: 7%;
-    max-width: calc(60% - 24px / 2);
+}
 
-    /*
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: calc(60% - 24px / 2);
-    height: auto;
-    width: auto\9;
-    */
-    // width: 80%;
-    // position: absolute;
-    // left: 50%;
-
+.mini-circle{
+    margin-top: 10%;
+    height: 30px;
+    width: 30px;
 }
 
 @media (max-width: 991.98px) {
@@ -109,6 +123,15 @@ body{
     .hide-small {
         display: block!important;
     }
+}
+
+.dropdown-favorites {
+    width: 281px;
+    background: #6B63B5!important;
+}
+
+.dropdown-item:focus, .dropdown-item:hover{
+    background: #585191!important;
 }
 
 // Font sizes
