--- a/src/App.scss
+++ b/src/App.scss
@@ -147,3 +147,25 @@ body{
 .fz-15 { font-size: 15px }
 .fz-14 { font-size: 14px }
 .fz-12 { font-size: 12px }
+
+.loader {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 99;
+}
+
+.loader-spinner {
+    position: fixed;
+    top: 47%;
+    left: calc(50% - 80px);
+    z-index: 100;
+    width: 3rem;
+    height: 3rem;
+}
